# ICS-Network-Security-AutoLearning

./: LICENSE  README.md  algorithm.py  attack_test.py  attack_test_dynamic.py  config.yaml  config_experiment.yaml  config_powerful.yaml  config_super_easy.yaml  main.py  pyproject.toml  quick_run.py  run_complete.py  run_demo.py  test_demo.db  test_environment.py  test_powerful.py  value_learning_fix.py  visualization.py  visualization_real.py
models/: communication_model_20251230_170746.json  communication_model_20260101_115915.json  value_model_20251230_170746.json
outputs/: attack_test_dynamic.json  attack_test_report.json  experiment_real_summary.json  experiment_summary.json  learning_report.json  quick_whitelist.json  value_rules_fixed.json  whitelist.yaml
simulator/: __init__.py  data_generator.py  packet_parser.py
simulator/learner/: __init__.py  base_learner.py  comm_learner.py  value_learner.py
simulator/model/: __init__.py  database.py  models.py
